[Database] "add a tutorial for the database connection in the .env file."

--- a/.env
+++ b/.env
@@ -3,3 +3,26 @@ DB_PASSWORD=alex
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=mysqldb
+
+
+// Comment se connecter à la base de donnée
+
+//1. Créer un fichier .env à la racine du projet
+
+//2. Ajouter les variables d environnement suivantes
+
+//3. Installer le package dotenv ainsi que le package pgx
+  // go get github.com/joho/godotenv 
+   // go get github.com/jackc/pgx
+
+//4. Installer l extension vscode  postgresql de chris kollman et non microsoft
+
+//5. s identifier à la base de donnée avec cette extension
+
+//6. lier la base de donnée au back end
+
+//7. !! Attention le fichier .env sera illisible tant que les commentaires seront présents n oublier pas de les supprimé une fois le (tuto) finis 
+
+ ////////////////////////////////////   //////////////////////////////////////////
+ 
+//8. optionel: installer l application postgresql pour avoir une interface graphique pour la base de donnée et la gérer plus facilement
