--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,24 @@
+version: '3'
 services:
-  web:
-    build: .
-    image: fondecranforum:latest
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    expose:
+      - "8080"
+    volumes:
+      - ./data:/data
+      - ./template/ressource/images:/app/template/ressource/images
+
+  nginx:
+    build:
+      context: .
+      dockerfile: nginx.Dockerfile
     ports:
+      - "80:80"
       - "443:443"
+    depends_on:
+      - app
     volumes:
       - ./template/ressource/images:/app/template/ressource/images
       - ./data:/data
