--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,24 +1,26 @@
-server {
-    listen 80;
-    server_name yourdomain.com;
-    return 301 https://$host$request_uri;
+user  nginx;
+worker_processes  1;
+
+error_log  /var/log/nginx/error.log warn;
+pid        /var/run/nginx.pid;
+
+events {
+    worker_connections  1024;
 }
 
-server {
-    listen 443 ssl;
-    server_name yourdomain.com;
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
-    ssl_certificate ./permsHttps/cert.pem;
-    ssl_certificate_key ./permsHttps/key.pem;
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
 
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
+    access_log  /var/log/nginx/access.log  main;
 
-    location / {
-        proxy_pass http://app:8080;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+    sendfile        on;
+    keepalive_timeout  65;
+
+    include /etc/nginx/conf.d/*.conf;
+    include /etc/nginx/sites-enabled/*;
 }
